--- a/action.yml
+++ b/action.yml
@@ -30,23 +30,30 @@ runs:
         ssh-keyscan ${{ inputs.ip_server }} >> ~/.ssh/known_hosts
       shell: bash
 
-    - name: Login dokku to registrys
+    - name: Login to Docker registries
       run: |
         ssh -t ${{ inputs.user_ssh }}@${{ inputs.ip_server }} <<EOF
           set -e
-          for i in '${{ inputs.registrys }}'; do
-            REGISTRY=\$(echo "\$i" | jq -r '.registry')
-            USERNAME=\$(echo "\$i" | jq -r '.username')
-            PASSWORD=\$(echo "\$i" | jq -r '.password')
-            LOGIN_TO_DOKKU=\$(echo "\$i" | jq -r '.login_to_dokku')
-            LOGIN_TO_DOCKER=\$(echo "\$i" | jq -r '.login_to_docker')
-    
-            if [ "\$LOGIN_TO_DOKKU" = "true" ]; then
-              dokku registry:login "\$REGISTRY" "\$USERNAME" "\$PASSWORD"
+          echo '${{ inputs.registrys }}' | jq -c '.[]' | while read -r i; do
+            REGISTRY=$(echo "$i" | jq -r '.registry // empty')
+            USERNAME=$(echo "$i" | jq -r '.username // empty')
+            PASSWORD=$(echo "$i" | jq -r '.password // empty')
+            LOGIN_TO_DOKKU=$(echo "$i" | jq -r '.login_to_dokku // empty')
+            LOGIN_TO_DOCKER=$(echo "$i" | jq -r '.login_to_docker // empty')
+
+            if [ -z "$REGISTRY" ] || [ -z "$USERNAME" ] || [ -z "$PASSWORD" ]; then
+              echo "Error: Missing required fields in the JSON."
+              exit 1
             fi
-    
-            if [ "\$LOGIN_TO_DOCKER" = "true" ]; then
-              echo "\$PASSWORD" | sudo docker login "\$REGISTRY" -u "\$USERNAME" --password-stdin
+
+            # Ejecutar el login en Dokku si está habilitado
+            if [ "$LOGIN_TO_DOKKU" = "true" ]; then
+              dokku registry:login "$REGISTRY" "$USERNAME" "$PASSWORD"
+            fi
+            
+            # Ejecutar el login en Docker si está habilitado
+            if [ "$LOGIN_TO_DOCKER" = "true" ]; then
+              echo "$PASSWORD" | sudo docker login "$REGISTRY" -u "$USERNAME" --password-stdin
             fi
           done
         EOF
