--- a/action.yml
+++ b/action.yml
@@ -32,19 +32,23 @@ runs:
 
     - name: Login to Docker registries
       run: |
-        ssh -t ${{ inputs.user_ssh }}@${{ inputs.ip_server }} <<EOF
+        ssh -t ${{ inputs.user_ssh }}@${{ inputs.ip_server }} <<'EOF'
           set -e
-          echo '${{ inputs.registrys }}' | jq -c '.[]' | while read -r i; do
+          REGISTRYS='${{ inputs.registrys }}'
+
+          echo "$REGISTRYS" | jq -c '.[]' | while read -r i; do
             REGISTRY=$(echo "$i" | jq -r '.registry // empty')
             USERNAME=$(echo "$i" | jq -r '.username // empty')
             PASSWORD=$(echo "$i" | jq -r '.password // empty')
             LOGIN_TO_DOKKU=$(echo "$i" | jq -r '.login_to_dokku // empty')
             LOGIN_TO_DOCKER=$(echo "$i" | jq -r '.login_to_docker // empty')
+
             echo "REGISTRY: $REGISTRY"
             echo "USERNAME: $USERNAME"
             echo "PASSWORD: $PASSWORD"
             echo "LOGIN_TO_DOKKU: $LOGIN_TO_DOKKU"
             echo "LOGIN_TO_DOCKER: $LOGIN_TO_DOCKER"
+
             if [ -z "$REGISTRY" ] || [ -z "$USERNAME" ] || [ -z "$PASSWORD" ] || [ -z "$LOGIN_TO_DOKKU" ] || [ -z "$LOGIN_TO_DOCKER" ]; then
               echo "Error: Missing required fields in the JSON."
               exit 1
